# Macro-Assistant

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  dsl_reference_generator.py  github_setup.md  implementation_plan.md  macro_launcher.py  macro_launcher_minimal.py  main.py  project_structure.md  pyproject.toml  requirements.txt  simple_ai_generator.py  simple_executor.py  simple_executor_enhanced.py  simple_launcher.py  test_cv_enhanced.py
core/: __init__.py  ai_router.py  config.py  context_manager.py  logger.py  main.py
data/: DSL_REFERENCE.txt  SYSTEM_COMMANDS.txt  dsl_variables.txt  history.json
data/generated_macros/: cv_debug_test.atlas  cv_test_enhanced.atlas  selenium_test.atlas  simple_test.atlas  system_commands_test.atlas  test_integration.atlas  tiktok_entry_manual.atlas  tiktok_fixed.atlas  tiktok_likes_macro.atlas  зайди_в_калькулятор_и_прибавь_20251113_155234.atlas  зайди_в_сафари_20251113_155318.atlas  используй_переменную_20251113_145843.atlas  открой_chrome_и_нажми_на_новую_20251113_160333.atlas  открой_chrome_и_найди_видео_пр_20251113_144045.atlas  открой_chrome_нажми_новую_вкла_20251113_161004.atlas  открой_chrome_нажми_новую_вкла_20251113_162252.atlas  открой_гугл_хром_20251113_150753.atlas  открой_калькулятор_и_посчитай_20251113_144430.atlas  открой_калькулятор_и_посчитай_20251113_145359.atlas  открой_калькулятор_и_посчитай_20251113_145603.atlas  открой_калькулятор_и_посчитай_20251113_150606.atlas  открой_калькулятор_посчитай_25_20251113_164436.atlas  открой_калькулятор_посчитай_25_20251113_164621.atlas  открой_новую_вкладку_в_браузер_20251113_144045.atlas  открой_тик_ток_20251113_160758.atlas  открой_ютуб_20251113_160735.atlas  открой_ютуб_20251113_160814.atlas  поставь_3_лайка_в_tiktok_20251113_144045.atlas  посчитай_25_плюс_17_в_калькуля_20251113_144045.atlas  привет_пожалуйста_открой_брауз_20251113_151220.atlas  тест_автообновления_20251113_160437.atlas  фастом_в_калькуляторе_167_1616_20251113_150825.atlas
docs/: LAUNCHERS_README.md  Macro-Assistant-InfoAboutProject.md  RELEASE_NOTES_v2.0.md
dsl_references/: DSL_REFERENCE.txt
engines/: __init__.py
engines/dsl/: __init__.py  atlas_executor.py  atlas_parser.py
engines/selenium/: __init__.py  selenium_engine.py  web_driver_manager.py
engines/vision/: __init__.py  template_matcher.py
launchers/: README.md  standalone_launcher.py
modules/executor/: __init__.py  config.json  main.py
modules/macro_generator/: README.md  config.json  main.py
modules/macro_generator/examples/: few_shot_examples.json
modules/macro_generator/prompts/: base_prompt.txt
modules/macro_generator/rules/: generation_rules.json
modules/module_template/: config.json  main.py
modules/module_template/prompts/: base_prompt.txt
modules/template_parser/: config.json  main.py
modules/video_processor/: README.md  config.json  main.py
modules/video_processor/examples/: example_usage.py
modules/video_processor/prompts/: base_prompt.txt
scripts/: create_module.py
templates/Chrome/TikTok/: structure.txt
tests/: README.md  test_enhanced_scroll.py  test_new_commands.py  test_scroll_and_errors.py  test_scroll_detailed.py  test_tiktok_scroll.py
utils/: README.md  dsl_reference_generator.py  variable_creator.py
