[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macro-assistant"
version = "1.0.0"
description = "Универсальный AI-ассистент для автоматизации любых задач на компьютере"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Macro-Assistant Team", email = "team@macro-assistant.com"}
]
maintainers = [
    {name = "Konstantin", email = "konstantin@macro-assistant.com"}
]
keywords = [
    "automation", "ai", "assistant", "macro", "computer-vision", 
    "selenium", "voice-control", "dsl", "rpa"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities"
]
requires-python = ">=3.11"

dependencies = [
    # Core dependencies
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "loguru>=0.7.0",
    
    # AI and ML
    "openai>=1.0.0",
    "anthropic>=0.8.0",
    "tiktoken>=0.5.0",
    
    # Computer Vision
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "scikit-image>=0.21.0",
    
    # Web Automation
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.0",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    
    # System Integration
    "pyautogui>=0.9.54",
    "pynput>=1.7.6",
    "psutil>=5.9.0",
    "pygetwindow>=0.0.9",
    
    # Voice Processing
    "speechrecognition>=3.10.0",
    "pyttsx3>=2.90",
    "pyaudio>=0.2.11",
    "vosk>=0.3.45",
    
    # GUI
    "PyQt6>=6.6.0",
    "PyQt6-tools>=6.6.0",
    
    # Database
    "sqlite-utils>=3.35.0",
    "sqlalchemy>=2.0.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "watchdog>=3.0.0",
    "schedule>=1.2.0",
    "tqdm>=4.66.0",
    "colorama>=0.4.6",
    "python-dateutil>=2.8.2"
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.3.0",
    
    # Code Quality
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pylint>=2.17.0",
    "bandit>=1.7.5",
    
    # Documentation
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
    
    # Development Tools
    "pre-commit>=3.4.0",
    "bump2version>=1.0.1",
    "twine>=4.0.2"
]

performance = [
    "uvloop>=0.17.0; sys_platform != 'win32'",
    "orjson>=3.9.0",
    "cython>=3.0.0",
    "numba>=0.58.0"
]

local-ai = [
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "accelerate>=0.24.0",
    "bitsandbytes>=0.41.0",
    "llama-cpp-python>=0.2.0"
]

all = [
    "macro-assistant[dev,performance,local-ai]"
]

[project.urls]
Homepage = "https://github.com/macro-assistant/macro-assistant"
Documentation = "https://docs.macro-assistant.com"
Repository = "https://github.com/macro-assistant/macro-assistant.git"
"Bug Tracker" = "https://github.com/macro-assistant/macro-assistant/issues"
Changelog = "https://github.com/macro-assistant/macro-assistant/blob/main/CHANGELOG.md"

[project.scripts]
macro-assistant = "core.main:main"
macro-gui = "ui.gui.main:main"
macro-voice = "ui.voice.main:main"
create-module = "scripts.create_module:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "modules*", "ui*", "scripts*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.json", "*.yaml", "*.yml", "*.md", "*.png", "*.jpg", "*.jpeg"]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["core", "modules", "ui", "scripts"]

# MyPy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "pyautogui.*",
    "pynput.*",
    "speech_recognition.*",
    "pyttsx3.*",
    "vosk.*"
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "gui: marks tests that require GUI",
    "voice: marks tests that require voice/audio",
    "cv: marks tests that require computer vision"
]

# Coverage configuration
[tool.coverage.run]
source = ["core", "modules", "ui", "scripts"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]

# Bandit security linter configuration
[tool.bandit]
exclude_dirs = ["tests", "venv", "env"]
skips = ["B101", "B601"]
